# course_sql_alembic

./: 01_lesson.py  02_lesson.py  README.md  lesson_01.py  lesson_02.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3f5da655f765_add_some_data.py  dffbb06840a0_initial_migration.py
