[tool.poetry]
name = "sql-alembic"
version = "0.1.0"
description = ""
authors = ["Henrik Anfinsen <henrik.anfinsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
